feat 活动页  fix 免登陆bug

--- a/comeponents/hooks1/index.wxml
+++ b/comeponents/hooks1/index.wxml
@@ -1,5 +1,3 @@
-<!-- index -->
-<text>我是组件1</text>
-<!-- 直接就能用 -->
-<view>{{list}}</view>
+<!-- 直接就能访问到 -->
+<view>{{list }}</view>
 <button class="btn" type="primary" bindtap="onTap">子点击事件</button>
