--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -15,3 +15,43 @@
   .pingtuantag {
     margin-left: 16rpx;
   }
+  .search-container {
+    background-color: white;
+  }
+  
+  .search {
+    position: relative;
+    width: 100vw;
+    height: 50rpx;
+    display: flex;
+    box-sizing: border-box;
+    padding-left: 26rpx;
+    background-color: white;
+  }
+  
+  .search input {
+    display: block;
+    box-sizing: border-box;
+    background: #F7F8FA;
+    height: 62rpx;
+    border-radius: 20rpx;
+    padding-left: 20rpx;
+    line-height: 62rpx;
+    font-size: 12px;
+  }
+  
+  .search-title {
+    left: 0;
+    font-weight: bold;
+    font-size: 16px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  
+  .search-placeholder {
+    font-size: 14px;
+    color: #A9A6A6;
+    line-height: 62rpx;
+  }
+  
